docs-archive/apache-airflow-providers-fab/3.0.2/_sources/_api/airflow/providers/fab/www/views/index.rst.txt
airflow.providers.fab.www.views
===============================

.. py:module:: airflow.providers.fab.www.views


Classes
-------

.. autoapisummary::

   airflow.providers.fab.www.views.FabIndexView


Functions
---------

.. autoapisummary::

   airflow.providers.fab.www.views.show_traceback
   airflow.providers.fab.www.views.not_found
   airflow.providers.fab.www.views.get_safe_url
   airflow.providers.fab.www.views.redirect
   airflow.providers.fab.www.views.method_not_allowed


Module Contents
---------------

.. py:class:: FabIndexView

   Bases: :py:obj:`flask_appbuilder.IndexView`


   A simple view that inherits from FAB index view.

   The only goal of this view is to redirect the user to the Airflow 3 UI index page if the user is
   authenticated. It is impossible to redirect the user directly to the Airflow 3 UI index page before
   redirecting them to this page because FAB itself defines the logic redirection and does not allow external
   redirect.


   .. py:method:: index()


.. py:function:: show_traceback(error)

   Show Traceback for a given error.


.. py:function:: not_found(error)

   Show Not Found on screen for any error in the Webserver.


.. py:function:: get_safe_url(url)

   Given a user-supplied URL, ensure it points to our web server.


.. py:function:: redirect(*args, **kwargs)

.. py:function:: method_not_allowed(error)

   Show Method Not Allowed on screen for any error in the Webserver.


